--- a/to-do-app/sass/_navigation.sass
+++ b/to-do-app/sass/_navigation.sass
@@ -13,7 +13,7 @@
 		border: 0
 		border-radius: 5px
 		cursor: pointer
-		transition: opacity 300ms ease-in-out, letter-spacing 150ms ease-in-out, background-color 300ms ease-in-out
+		transition: opacity 300ms ease-in-out, letter-spacing 150ms ease-in-out
 
 		@include breakpoint-up(medium)
 			text-align: left
@@ -22,7 +22,7 @@
 		&:focus
 			opacity: 85%
 			letter-spacing: 7px
-			background-color: $clr-light
+			// background-color: $clr-light
 
 		&[aria-selected="true"]
 			background-color: $clr-accent
